<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/ellipseimg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ellipse" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/drivon" />

    <TextView
        android:id="@+id/wlcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ellipseimg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avanir5"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wlcm"
        android:layout_centerInParent="true"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">

        <EditText
            android:id="@+id/et_user_email_signin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:hint="@string/text_user_email"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHint="@android:color/black" />


        <EditText
            android:id="@+id/et_password_signin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_12dp"
            android:drawableRight="@drawable/see"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@android:color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/sign_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:layout_marginLeft="@dimen/_10dp"
        android:text="@string/dont"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_below="@id/sign_link"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/shape"
        android:fontFamily="@font/avanir5"
        android:gravity="center"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_18sp" />


    <ImageView
        android:id="@+id/rectangle_line"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_below="@id/login_button"
        android:layout_marginTop="24dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:textSize="@dimen/_20sp" />

    <ImageView
        android:id="@+id/rectangle_line2"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_below="@id/login_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:background="@android:color/black" />

    <Button
        android:id="@+id/btn_google_sign"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/btnphone"
        android:drawableRight="@drawable/google"
        android:fontFamily="@font/avanir5"
        android:paddingRight="@dimen/_30dp"
        android:text="@string/sign_google"
        android:textColor="@android:color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/city_car" />

</RelativeLayout>